--- a/todoappEx1/templates/index.html
+++ b/todoappEx1/templates/index.html
@@ -8,48 +8,109 @@
   <body>
     <ul>
       {% for d in data %}
-      <li>{{d.description}}</li>
+      <li>
+        <input
+          class="check-completed"
+          data-id="{{ d.id }}"
+          type="checkbox"
+          {%
+          if
+          d.completed
+          %}
+          checked
+          {%
+          endif
+          %}
+        />
+        {{d.description }}
+      </li>
       {% endfor %}
     </ul>
     <form id="form" method="post" action="/todos/create">
-        <input type="text" id="description" name="description" />
-        <input type="submit" value="Create" />
-      </form>
+      <input type="text" id="description" name="description" />
+      <input type="submit" value="Create" />
+    </form>
     <div class="hidden" id="error" style="display: none">
       Something went wrong!
     </div>
     <script>
-        const descInput = document.getElementById('description');
-        document.getElementById('form').onsubmit = function(e) {
-          e.preventDefault();
-          const desc = descInput.value;
-          descInput.value = '';
-          fetch('/todos/create', {
+      const checkboxes = document.querySelectorAll('.check-completed');
+      for (let i = 0; i < checkboxes.length; i++) {
+        const checkbox = checkboxes[i];
+        checkbox.onchange = function(e) {
+          console.log('event', e)
+          const newCompleted = e.target.checked;
+          const todoId = e.target.dataset['id'];
+          fetch('/todos/' + todoId + '/set-completed', {
             method: 'POST',
             body: JSON.stringify({
-              'description': desc,
+              'completed': newCompleted
             }),
             headers: {
-              'Content-Type': 'application/json',
+              'Content-Type': 'application/json'
             }
           })
-          .then(response => response.json())
-          .then(jsonResponse => {
-            console.log('response', jsonResponse);
-            li = document.createElement('li');
-            li.innerText = desc;
-            document.getElementById('todos').appendChild(li);
+          .then(function() {
             document.getElementById('error').className = 'hidden';
           })
           .catch(function() {
             document.getElementById('error').className = '';
           })
         }
+      }
+
+      const descInput = document.getElementById("description");
+      document.getElementById("form").onsubmit = function (e) {
+        e.preventDefault();
+        const desc = descInput.value;
+        descInput.value = "";
+        fetch("/todos/create", {
+          method: "POST",
+          body: JSON.stringify({
+            description: desc,
+          }),
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((response) => response.json())
+          .then((jsonResponse) => {
+            console.log("response", jsonResponse);
+            li = document.createElement("li");
+            li.innerText = desc;
+            document.getElementById("todos").appendChild(li);
+            document.getElementById("error").className = "hidden";
+          })
+          .catch(function () {
+            document.getElementById("error").className = "";
+          });
+      };
     </script>
   </body>
   <style>
     .hidden {
       display: none;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      clear: both;
+    }
+    li button {
+      -webkit-appearance: none;
+      border: none;
+      outline: none;
+      color: red;
+      float: right;
+      cursor: pointer;
+      font-size: 20px;
+    }
+    .lists-wrapper, .todos-wrapper {
+      display: inline-block;
+      vertical-align: top;
     }
   </style>
 </html>
